# ibkr-cli

./: .gitignore  README.md  pyproject.toml
skills/ibkr-cli/: SKILL.md
skills/ibkr-cli/references/: market-data.md  setup.md  trading.md
src/ibkr_cli/: app.py  config.py  ib_service.py  version_check.py
tests/: test_account_summary.py  test_cli.py  test_config.py  test_renderers.py  test_trade_contracts.py
